<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Internet Map</string>
    <string name="youarehere">You are here</string>
    <string name="nomoredata">No additional data.</string>
    <string name="nodata">No data.</string>
    <string name="oneconnection">One Connection</string>
    <string name="nconnections">%d Connections</string>
    <string name="dotraceroute">Traceroute</string>
    <string name="tracerouteAlreadyRunning">A traceroute is already running</string>
    <string name="currentASNFail">Couldn\'t look up current address.</string>
    <string name="asnAssociationFail">Couldn\'t find a node associated with your host.</string>
    <string name="tracerouteStartIPFail">Error: ASN couldn\'t be resolved into IP. Please try another node!</string>
    <string name="noInternet">This feature requires internet access.</string>
    <string name="searchHint">Type a company or domain...</string>
    <string name="findHost">Find host \'%s\'</string>
    <string name="invalidHost">Can\'t find host \'%s\'</string>
    <string name="yourLocation">Your Location</string>
    <string name="infoHelp">Introduction</string>
    <string name="infoContactLink">Contact Cogeco Peer 1</string>
    <string name="infoAboutLink">About Cogeco Peer 1</string>
    <string name="infoMoreAboutLink">Visit cogecopeer1.com</string>
    <string name="infoOpenSource">Open Source</string>
    <string name="infoCredits">Credits</string>
    <string name="infoPingUs">Ping Us</string>
    <string name="loading">Loading %s...</string>
    <string name="contactSalesHeader">Contact Us</string>
    <string name="contactSalesBlurb">Learn more about our hosting and cloud services</string>
    <string name="contactSalesFooter">cogecopeer1.com | 1.866.579.9690 | Follow us @CogecoPeer1</string>
    <string name="nameHint">Name (Required)</string>
    <string name="phoneHint">Phone</string>
    <string name="emailHint">Email (Required)</string>
    <string name="submit">Submit</string>
    <string name="requiredName">Name cannot be empty.</string>
    <string name="requiredEmail">Email cannot be empty.</string>
    <string name="submitSuccess">Submitted. Thank you.</string>
    <string name="submitFail">Could not complete the contact request. Please try again later.</string>
    <string name="submitFailEmail">Please enter a valid email address.</string>
    <string name="next">\u0020Next\u0020></string>
    <string name="finish">Finish</string>
    <string name="simulated">Simulated Data</string>
    <string name="searching">Searching...</string>

    <string name="mapOfTheInternet">Map of the Internet</string>
    <string name="broughtToYouBy">brought to you by</string>
    <string name="onboardingText">This is a 3D visualization of the worldwide networks that make up the internet. Each point represents a connected ISP, exchange point, university or other organization.</string>
    <string name="explore">Explore</string>
    <string name="searchTooltip">Here you can search for\ncompanies and domains</string>
    <string name="visTooltip">You can also view the\ninternet as a network</string>
    <string name="timelineTooltip">And browse the\nhistory of the internet</string>

    <string name="trace_ip_hops">IP Hops</string>
    <string name="trace_asn_hops">ASN Hops</string>
    <string name="trace_time">Time (ms)</string>
    <string name="traceroute_details">Details of Traceroute</string>

    <string name="ping">Ping</string>
    <string name="pinging_x">Pinging %s</string>
    <string name="ping_average">Average</string>
    <string name="ping_best">Best</string>
    <string name="ping_received">Received</string>
    <string name="reply_from_x">Reply from %s</string>
    <string name="request_timed_out">Request timed out</string>

</resources>
