<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.peer1.internetmap.FirstTimeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/contentPadding">

        <TextView
            fontPath="@string/font_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20sp"
            android:text="@string/mapOfTheInternet"
            android:textColor="@color/colorAccent"
            android:textSize="32dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/broughtToYouBy"
            android:textColor="@color/lightTextColor" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/load_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:textSize="18dp"
            android:lineSpacingMultiplier="1.2"
            android:gravity="center"
            android:text="@string/onboardingText"
            android:textColor="@color/lightTextColor" />

        <Button
            android:id="@+id/explore_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_button_accent_color"
            android:text="@string/explore" />

    </LinearLayout>


</RelativeLayout>
