<merge>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/traceroute_properties"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <LinearLayout
                style="@style/traceroute_property"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/traceroute_property_header"
                    fontPath="@string/font_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/trace_ip_hops" />

                <TextView
                    android:id="@+id/trace_ip_hops"
                    style="@style/traceroute_property_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="0" />

            </LinearLayout>

            <LinearLayout
                style="@style/traceroute_property"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/traceroute_property_header"
                    fontPath="@string/font_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/trace_asn_hops" />

                <TextView
                    android:id="@+id/trace_asn_hops"
                    style="@style/traceroute_property_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="0" />

            </LinearLayout>

            <LinearLayout
                style="@style/traceroute_property"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/traceroute_property_header"
                    fontPath="@string/font_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/trace_time" />

                <TextView
                    android:id="@+id/trace_time"
                    style="@style/traceroute_property_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="0" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/traceroute_details"
            android:textColor="@color/lightTextColor"
            android:textSize="20dp" />


        <LinearLayout
            android:id="@+id/trace_list_layout"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical" />


        <!--<ListView-->
        <!--android:id="@+id/trace_list_view"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="1"-->
        <!--android:padding="0dp"-->
        <!--android:dividerHeight="0dp" />-->

    </LinearLayout>

</merge>